# fuji

./: Cargo.toml
examples/: triangle.frag  triangle.rs  triangle.vert
src/: lib.rs  shader.frag  shader.vert
